<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/lesson_completed"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_qush_hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/you_got"
        android:layout_marginStart="20dp"
        android:textColor="@color/green"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_diamonds_text_full"
        android:gravity="center"
        android:text="@string/diamond"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_diamonds_text"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="24dp">


        <TextView
            android:id="@+id/tv_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="+24" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_almaz" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:orientation="vertical"
            android:background="@drawable/recycler_bg_orange">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/text_bg_orange"
                android:gravity="center"
                android:text="@string/words"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="+5"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_chaqmoq"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:orientation="vertical"
            android:background="@drawable/recycler_bg_red">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/text_bg_red"
                android:gravity="center"
                android:text="@string/accuracy"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                tools:text="80%"
                android:id="@+id/tvAccuracy"
                android:drawableEnd="@drawable/ic_target"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_bg_green"
        android:drawableEnd="@drawable/ic_next"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>